crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_qmark_y.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<?Y\"####)"
---
[
    Token {
        data: "Y",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
