crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_u0000.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<\u0000\"####)"
---
[
    Token {
        data: "<\0",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
